syntax = "proto3";

package containerservice;

option go_package = "github.com/dgunzy/go-container-orchestrator/pkg/proto";

service ContainerService {
  rpc CreateContainer(CreateContainerRequest) returns (CreateContainerResponse) {}
  rpc ListContainers(ListContainersRequest) returns (ListContainersResponse) {}
  rpc UpdateContainer(UpdateContainerRequest) returns (UpdateContainerResponse) {}
  rpc RemoveContainer(RemoveContainerRequest) returns (RemoveContainerResponse) {}
}

message ContainerConfig {
  string domain_name = 1;
  string image_name = 2;
  string container_name = 3;
  string container_id = 4;
  string container_port = 5;
  string host_port = 6;
  string registry_username = 7;
  string registry_password = 8;
  string status = 9;
}

message CreateContainerRequest {
  ContainerConfig config = 1;
}

message CreateContainerResponse {
  string container_id = 1;
}

message ListContainersRequest {}

message ListContainersResponse {
  repeated ContainerConfig containers = 1;
}

message UpdateContainerRequest {
  ContainerConfig config = 1;
}

message UpdateContainerResponse {
  bool success = 1;
}

message RemoveContainerRequest {
  string container_name = 1;
  bool remove_image = 2;
}

message RemoveContainerResponse {
  bool success = 1;
}